fixing select bug on ios

--- a/src/css/partials/_page.scss
+++ b/src/css/partials/_page.scss
@@ -5,6 +5,9 @@
   min-height: 100%;
   overflow: hidden;
   position: fixed;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .page:last-child(1) {
